--- a/app/package.json
+++ b/app/package.json
@@ -14,5 +14,10 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/draft-js": "^0.10.40",
+    "@types/draftjs-to-html": "^0.8.0",
+    "@types/react-draft-wysiwyg": "^1.13.0"
+  }
 }
