--- a/package.json
+++ b/package.json
@@ -270,10 +270,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@hot-loader/react-dom": "^16.13.0",
+    "ckeditor4-react": "^1.1.0",
     "connected-react-router": "^6.6.1",
     "core-js": "^3.6.4",
     "devtron": "^1.4.0",
     "draft-js": "^0.11.5",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
     "draftjs-to-html": "^0.9.1",
     "electron-debug": "^3.0.1",
     "electron-log": "^4.0.6",
@@ -282,7 +286,6 @@
     "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-draft-wysiwyg": "^1.14.5",
     "react-hot-loader": "^4.12.19",
     "react-quill": "^1.3.5",
     "react-redux": "^7.1.3",
