--- a/package.json
+++ b/package.json
@@ -293,6 +293,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "simplemde": "^1.11.2",
     "source-map-support": "^0.5.16"
   },
   "devEngines": {
