--- a/package.json
+++ b/package.json
@@ -283,6 +283,7 @@
     "electron-log": "^4.0.6",
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
+    "markdown": "^0.5.0",
     "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
