--- a/package.json
+++ b/package.json
@@ -288,6 +288,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
+    "react-icons": "^3.10.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
