--- a/package.json
+++ b/package.json
@@ -270,6 +270,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@hot-loader/react-dom": "^16.13.0",
+    "babili-webpack-plugin": "^0.1.2",
     "ckeditor4-react": "^1.1.0",
     "compressorjs": "^1.0.6",
     "connected-react-router": "^6.6.1",
@@ -283,6 +284,7 @@
     "electron-debug": "^3.0.1",
     "electron-log": "^4.0.6",
     "electron-updater": "^4.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.10.1",
     "markdown": "^0.5.0",
     "quill": "^1.3.7",
