--- a/package.json
+++ b/package.json
@@ -270,6 +270,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@hot-loader/react-dom": "^16.13.0",
+    "@material-ui/core": "^4.10.0",
     "babili-webpack-plugin": "^0.1.2",
     "ckeditor4-react": "^1.1.0",
     "compressorjs": "^1.0.6",
