--- a/package.json
+++ b/package.json
@@ -268,9 +268,11 @@
     "yarn": "^1.21.1"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.6.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@material-ui/core": "^4.10.0",
+    "@material-ui/pickers": "^3.2.10",
     "babili-webpack-plugin": "^0.1.2",
     "ckeditor4-react": "^1.1.0",
     "compressorjs": "^1.0.6",
